# Audio-Master-

./: Audio_processor.py  README.md  app.js  app.py  index.html  main.py  pyproject.toml  requirements.txt  style.css
static/: app.js  index.html  style.css
