[tool.poetry]
name = "audiomasterpro"
version = "1.0.0"
description = "Moises-level mobile-first audio processing web app"
authors = ["Neetu Raikwar <neeturaikwar914@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.111.1"
uvicorn = "0.24.0"
aiofiles = "23.1.0"
python-multipart = "0.0.6"
numpy = "1.26.0"
scipy = "1.12.1"
librosa = "0.10.3.post2"
soundfile = "0.12.2"
pydantic = "2.5.1"

[tool.poetry.dev-dependencies]
pytest = "7.4.2"
black = "24.12.0"

[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"